Version 2.2.8 - NO NAME SET
----------------------------------
Core - General
  - Re-introduce the host_whitelist config entry that got lost in some commit somewhere.

Search v1.51.5
  - Now enforce utf-8 on preg_plit.

CMSJobManager v0.1.3
  - Fix a notice.

FileManager 
  - remove un-necessary files that may cause a security vulnerability.

Navigator
  - Template fix simple_navigation.tpl. Output correct class for parent without active children.


Version 2.2.7 - Skookumchuck
----------------------------------
Core - General
  - Change internal CSRF variable name
  - Fix object insertion bug via deserialize in LoginOperations 
  - Fix issue where login cookie contents could be forged by determining the hashing salt
  - Refactor the mechanism for generating and verifying admin account password reset codes.

FileManager v1.6.6
  - No longer allow uploading files with names that end in .

FilePicker v1.0.2
  - No longer allow uploading files with names that end in .

Search v1.51.4
  - Minor fix to microtime calls.


Version 2.2.6 - Come by Chance
----------------------------------
Core - General
  - Fixes to AdminAlerts::load_by_name().
  - SetMessage() and SetError() in the module API now use session variables.
  - Remove support for module_error and module_action request parameters in admin module actions.
  - Add call to check_login() in admin actions that were missing them.

Search v1.51.3
  - Fix notice in PHP 7.1: A non well formed numeric value encountered...


Version 2.2.5 - Wawa
----------------------------------
Core - General
  - Fix minor security issue in the way login information was cached in cookies and the session.
  - Simplify rules around alias editing/generation in fillparams. 
    If the alias field exists then we can adjust its value or recalculate an alias.
    Use basic properties, and ownership and permissions to determine if that field exists on the edit form.
  - Minor fixes to the CmsJobManager.


Version 2.2.4 - Little Paradise